tdf#48658 writerfilter: only set THROUGH wraps as opaque

In MSWord, the header is at a lower zOrder than the body,
so objects that are OVER the header text are still UNDER
the body text. Writer emulates this by insisting that all
through-wrapped header objects are UNDER the header text.
(This ought to only apply to objects that spill into the
body text area, but that’s pretty hard to calculate, so
transparency is applied to any object anchored in the header.)

commit 15c3a08b8b1e8060f9659c7bc98480a39d1802c5 set transparency
before the wrap type was known (which is good in case wrap type is
never defined, and the default wrap type IS through, so that fits)
but transparency was never re-evaluated once the wrap type was known.

Change-Id: Ie3916c6b7f3fa80caf5994fd910ba4d4d89ec702